# vtb-api-2024-grpc

./: .dockerignore  .env.dev  .env.prod  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  go.mod  go.sum
.github/workflows/: ci.yaml
antivirus/: antivirus.go  scanner.go
api/v1/user/: user.proto
certs/: client-ext.cnf  gen-cert.sh  server-ext.cnf
client/: Dockerfile  Makefile  pyproject.toml
client/app/: main.py
client/app/routers/: users.py
client/app/templates/: index.html  user_detail.html
client/client/: main.py  user_pb2.py  user_pb2_grpc.py
client/client/adapters/grpc/: client.py  config.py  di.py  exception.py
client/client/adapters/grpc/proto/: user.proto
client/client/adapters/repositories/: di.py  user.py
client/client/application/: config.py  exceptions.py
client/client/domain/: di.py
client/client/domain/entities/: user.py
client/client/domain/interfaces/repositories/: user.py
client/client/domain/services/: user.py
client/client/presentors/rest/: config.py  di.py  factory.py  handlers.py
client/client/presentors/rest/routers/api/: router.py
client/client/presentors/rest/routers/api/v1/: router.py
client/client/presentors/rest/routers/api/v1/endpoints/: users.py
client/client/presentors/rest/routers/api/v1/schemas/: common.py
client/client/presentors/rest/routers/templates/: router.py  users.py
client/client/presentors/rest/routers/views/: router.py  users.py
client/client/presentors/rest/routers/views/schemas/: users.py
client/client/presentors/rest/templates/: base.html  base.html.j2  create_user.html.j2  index.html.j2  update_user.html  update_user.html.j2  user_detail.html.j2
client/client/routers/: users.py
client/client/templates/: create_user.html
cmd/grpc_server/: main.go
docs/: architecture.puml  client-server.puml
internal/adapters/antivirus/: config.go  interceptor.go  middleware.go  scanner.go
internal/antivirus/: scanner_test.go
internal/app/: app.go  service_provider.go
internal/config/: antivirus.go  grpc.go  mtls.go
internal/converter/: user.go
internal/interceptors/: auth_interceptor.go
internal/model/: user.go
internal/repository/: repository.go
internal/service/: service.go
migrations/: 2024_11_22_initial_migration.sql
(+43 files in other folders)
