[tool.poetry]
name = "client"
version = "0.1.0"
description = "client for grpc app vtb"
authors = [
    "Danila Kutuzov <danilakutuzov@gmail.com>",
    "Sergey Natalenko <sergey.natalenko@mail.ru>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
Jinja2 = "^3.1.4"
grpcio = "^1.68.0"
grpcio-tools = "^1.68.0"
googleapis-common-protos = "^1.66.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
